fixes performance on mobile devices
creates a loadFile() function to add js dynamically to the page where
screen size is greater than 768px

--- a/blog/css/styles.css
+++ b/blog/css/styles.css
@@ -10,7 +10,26 @@ body::before {
     top: 0;
     position: fixed;
 }
-
+/*
+@media (max-width: 512px)  and (min-resolution: 1.5dppx),
+       (max-width: 1024px) and (max-resolution: 1.5dppx) {
+  body::before {
+    background-image: url('images/bg_1024.jpg');
+  }
+}
+@media (min-width: 513px)  and (max-width: 1024px) and (min-resolution: 1.5dppx),
+       (min-width: 1025px) and (max-width: 2048px) and (max-resolution: 1.5dppx)  {
+  body::before {
+    background-image: url('images/bg_2048.jpg');
+  }
+}
+@media (min-width: 1025px) and (min-resolution: 1.5dppx),
+       (min-width: 2049px) and (max-resolution: 1.5dppx) {
+  body::before {
+    background-image: url('images/bg_2880.jpg');
+  }
+}
+*/
 body .demo-blog {
   font-family: 'Roboto', 'Helvetica', sans-serif;
 }
